<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Profile Image -->

    <!-- Name TextView -->

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/profile_tsofen"
        app:layout_constraintBottom_toTopOf="@id/nameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- BMI TextView -->

    <ImageButton
        android:id="@+id/goBackButton"
        android:layout_width="42dp"
        android:layout_height="46dp"
        android:background="#FFFFFF"
        android:src="@drawable/Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="72dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_linear_layout"
        android:padding="8dp"
        android:text="@string/bmi_xx"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintVertical_bias="0.067"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/weeklySummaryTextView"
        android:layout_width="262dp"
        android:layout_height="158dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_linear_layout"
        android:padding="8dp"
        android:text="@string/weekly_summary"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bmiTextView"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintWidth_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>
