<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    tools:context=".Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/updateButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title -->
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="Your information"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:drawableStart="@drawable/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_edit_text"
                    android:drawableStart="@drawable/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Gender -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Gender">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/gender_edit_text"
                    android:drawableStart="@drawable/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Height -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Height">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/height_edit_text"
                    android:drawableStart="@drawable/height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Weight -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Weight">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/weight_edit_text"
                    android:drawableStart="@drawable/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Birth Date -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Birth Date">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthDate_edit_text"
                    android:drawableStart="@drawable/birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Body Type -->
            <Spinner
                android:id="@+id/bodytype_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border"
                android:prompt="@string/body_type_prompt" />

            <!-- Goal -->
            <Spinner
                android:id="@+id/goal_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border"
                android:prompt="@string/goal_prompt" />

            <!-- Step Count Goal -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/stepcountgoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Step count goal">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/stepcountgoal_edit_text"
                    android:drawableStart="@drawable/steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hydration Goal -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hydrationgoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Hydration goal">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hydrationgoal_edit_text"
                    android:drawableStart="@drawable/water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Workout Location -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/workoutlocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Workout Location">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/workoutlocation_edit_text"
                    android:drawableStart="@drawable/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Diet Type -->
            <Spinner
                android:id="@+id/diet_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border"
                android:prompt="@string/diet_type_prompt" />

            <!-- Allergies -->
            <Spinner
                android:id="@+id/allergies_spinner"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border"
                android:prompt="@string/allergies_prompt" />

            <!-- Meals Per Day -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mealsperday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Meals per day">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mealsperday_edit_text"
                    android:drawableStart="@drawable/meal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Snacks Per Day -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/snacksperday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Snacks per day">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/snacksperday_edit_text"
                    android:drawableStart="@drawable/snacks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Water default -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/waterDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Water default">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/waterDefault_edit_text"
                    android:drawableStart="@drawable/water_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

<!--             Training days -->
            <TextView
                android:id="@+id/select_training_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border"
                android:padding="16dp"
                android:text="Select Training Days"
                android:textColor="@android:color/black" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:text="Update"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
